--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-DJANGO_SECRET_KEY=django-insecure-h5*01q001b50lna&9=^c^hrrmi4y5j8%ok_w^9w--npy*i%ws@
-DJANGO_DEBUG=True
+DEBUG=True
+SECRET_KEY=your-secret-key
+DB_NAME=alx_travel_app
+DB_USER="root"
+DB_PASSWORD="Password6$"
+DB_HOST=localhost
+DB_PORT=3306
 
-MYSQL_DB=alx_travel_db
-MYSQL_USER=Benose13
-MYSQL_PASSWORD=Iamhead-11
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
+CHAPA_SECRET_KEY=your_chapa_secret_key_here
+
