--- a/alx_travel_app/requirements.txt
+++ b/alx_travel_app/requirements.txt
@@ -1,7 +1,22 @@
-django
-djangorestframework
-django-cors-headers
+asgiref==3.9.1
+Django==5.2.6
+django-cors-headers==4.9.0
+django-environ==0.12.0
+django-seed==0.3.1
+djangorestframework==3.16.1
+Faker==37.8.0
+sqlparse==0.5.3
+toposort==1.10
+typing_extensions==4.15.0
+tzdata==2025.2
 drf-yasg
 celery
-django-environ
 mysqlclient
+redis
+gunicorn
+django-celery-results==2.5.1
+whitenoise==6.6.0
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
+requests==2.31.0
+python-dotenv==1.0.0
